# vade-evan-old

./: Cargo.toml  README.md  VERSIONS.md
src/: lib.rs
src/platform/: mod.rs  rust_logger.rs
src/plugin/: mod.rs  rust_didresolver_evan.rs  rust_vcresolver_evan.rs
tests/: did_resolver.rs  integration_test.rs  logger.rs  vc_resolver.rs
