[package]
name = "ssi-evan"
version = "0.1.0"
authors = ["evan GmbH"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1.24"
futures = "0.3.4"
env_logger = "0.7.1"
log = "0.4.8"
reqwest = "0.10.1"
serde_json = "1.0.48"
simple-error = "0.2.1"
# unpublished crate
ssi = { path = "../ssi" }

[dev-dependencies]
tokio = { version = "0.2.11", features = ["macros", "rt-threaded"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
