[package]
name = "vade-evan"
version = "0.0.5"
authors = ["evan GmbH"]
edition = "2018"
license = "Apache-2.0"
license-file = "LICENSE.txt"
description = "vade plugins for working with VCs and DIDs on evan.network"
homepage = "https://github.com/evannetwork/vade-evan"
documentation = "https://docs.rs/crate/vade-evan"
repository = "https://github.com/evannetwork/vade-evan"
readme = "README.md"
keywords = ["did", "ssi", "vc"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1.24"
chrono = "0.4.11"
data-encoding = "2.2.0"
futures = "0.3.4"
env_logger = "0.7.1"
base64 = "0.11.0"
log = "0.4.8"
regex = "1.3.5"
reqwest = "0.10.1"
serde = { version = "1.0.104", features = ["derive"] } 
serde_json = { version = "1.0.48", features = ["preserve_order"] }
sha3 = "0.8.2"
sha2 = "0.8.1"
libsecp256k1 = "0.3.5"
hex = "0.4.2"
simple-error = "0.2.1"
vade = "0.0.6"

[dev-dependencies]
tokio = { version = "0.2.11", features = ["macros", "rt-threaded"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
